# mtg_auction

./: .gitignore  Caddyfile  Cargo.toml  README.md  game_state.json.2026-06-29-22.bak  game_state.json.2026-06-30-00.bak
.github/workflows/: ci.yml
src/: api.rs  app.rs  engine.rs  hash.rs  ladder.rs  lib.rs  main.rs  model.rs  scryfall.rs
src/engine/: deliveries.rs  matching.rs  mod.rs  reports.rs  setup.rs
static/: admin-core.js  admin-manage.js  admin-setup.js  admin.html  admin.js  app-core.js  app-home.js  app-ladder.js  app-market.js  app.js  index.html  style.css  util.js
tests/: api.rs  deliveries.rs  house.rs  ladder.rs  matching.rs  persistence.rs  properties.rs  reports.rs
